updating exmaple repo

--- a/intro-to-binder.ipynb
+++ b/intro-to-binder.ipynb
@@ -122,11 +122,15 @@
    "source": [
     "Here's an example of a Binder link:\n",
     "\n",
-    "https://mybinder.org/v2/gh/jakevdp/PythonDataScienceHandbook/master?filepath=notebooks%2FIndex.ipynb\n",
+    "https://mybinder.org/v2/gh/trekhleb/homemade-machine-learning/master?filepath=notebooks%2Fanomaly_detection%2Fanomaly_detection_gaussian_demo.ipynb\n",
     "\n",
-    "Clicking it will create a *live* version of Jake van der Plas' Datascience Handbook repository:\n",
+    "Clicking it will create a *live* version of the repository (a collection of notebooks\n",
+    "that introduce you to machine learning). Because the link has a \"filepath\" argument,\n",
+    "it will open the notebook on anomaly detection.\n",
     "\n",
-    "https://github.com/jakevdp/PythonDataScienceHandbook"
+    "Here's the repository that you've just run:\n",
+    "\n",
+    "https://github.com/trekhleb/homemade-machine-learning"
    ]
   },
   {
@@ -354,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "livereveal": {
    "autolaunch": true,
